Revision history for POE-Quickie

{{$NEXT}}

0.14  Mon Aug 2 07:46:04 GMT 2010
    - Enable USE_SIGCHLD in POE for instant child process reaping. Might make
      a difference with bots that use a lot of fork()ing plugins.
    - Fix a bug which caused -V/--version to not print the version
    - Color plugin errors red like other errors

0.13  Mon Jul 26 03:54:30 GMT 2010
    - Shutdown properly when connected to a server which we've failed to log
      into. Depend on POE::Component::IRC 6.36 for this.
    - Allow a default server again
    - Fix an error which was causing some plugins to fail to load

0.12  Sat Jul 24 21:34:01 GMT 2010
    - Exit after --version
    - Only daemonize after we've done more sanity checks

0.11  Sat Jul 24 21:11:25 GMT 2010
    - Shut down disconnected IRC components properly
    - Rename "-c" option to "-f" and make "-c" validate the config file

0.10  Mon Jun 28 21:39:05 GMT 2010
    - Print compilation errors if we fail to load a plugin

0.09  Mon Jun 28 21:24:31 GMT 2010
    - Color exceptions red when using terminal colors
    - Make sure we exit on exception when using multiple components

0.08  Mon Jun 28 20:00:32 GMT 2010
    - Fix problem with terminal color codes working across newlines

0.07  Mon Jun 28 19:55:27 GMT 2010
    - Use terminal colors for status messages, to easily differentiate it
      from other output

0.06  Sun Jun 27 08:34:55 GMT 2010
    - Don't print raw protocol lines simply because some plugin happens to
      enable raw events in POE::Component::IRC
    - Install INT signal handler after we load POE::Component::IRC, not
      before. Avoids an issue with Net::DNS (or a dependency of it) clearing
      $SIG{INT} on Perl 5.13.2

0.05  Sat Jun 26 06:08:47 GMT 2010
    - Shut down if we catch an exception in our code

0.04  Sat Jun 26 05:48:13 GMT 2010
    - Don't require server to be specified in a network hash if a default
      one is specified

0.03  Sat Jun 26 04:44:32 GMT 2010